<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/add_dept"
        android:title="@string/add_department"
        android:icon="@drawable/ic_add_dept"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/add_student"
        android:title="@string/add_student"
        android:icon="@drawable/ic_add_student"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/delete_student"
        android:title="@string/delete_a_student"
        android:icon="@drawable/ic_delete_student"
        app:showAsAction="ifRoom"/>

</menu>