<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.AddDept">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/add_department"/>

        <EditText
            android:id="@+id/shortName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/short_name"/>

        <EditText
            android:id="@+id/longName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/long_name"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>
</layout>